--- a/IHE-Test/static/css/main.css
+++ b/IHE-Test/static/css/main.css
@@ -1,113 +1,127 @@
-html,body{
-    height: 100%;
-    font-weight: bold;
-}
-
-#app,.lw-container {
-    height: 100%;
-    text-align: center
-}
+html,
 body {
-    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
-  }
-
-button,
-input,
-optgroup,
-select,
-textarea {
-      font-family: "Microsoft YaHei","微软雅黑"
-  }
-.center{
-    text-align: center;
+  height: 100%;
+  font-weight: bold;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  box-sizing: border-box;
 }
 
-.el-card__header{
-    padding: 10px 20px;
-    text-align: left;
-    border: none;
-    color: #457bc7
+#app {
+  height: 100%;
+  text-align: center
 }
+
+.form-wrap {
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+/* 折叠版 */
+
+.el-collapse-item__header {
+  line-height: 36px;
+  height: 36px;
+  font-weight: bold;
+  text-align: left;
+  margin-left: 45px;
+}
+
+.el-collapse-item__arrow {
+  line-height: 36px;
+  float: none;
+}
+
+/* 卡片 */
+
 .el-card {
   border: none;
-  box-shadow:none;
+  box-shadow: none;
   border-radius: 0;
-      border-right: 1px solid #ebeef5;
-    border-bottom: 1px solid #ebeef5;
 }
 
-.el-form-item {
-    margin-bottom: 16px;
+.el-card__header {
+  padding: 10px 20px;
+  text-align: left;
+  border: none;
+  color: #457bc7
 }
 
+.el-card__body {
+  padding: 0 30px 10px 30px;
+}
+
+/* 表单 */
+
+.el-form-item--mini.el-form-item,
+.el-form-item--small.el-form-item {
+  margin-bottom: 8px;
+}
+
+/* 上传组件 */
+
+.el-upload {
+  display: block;
+}
+
+.el-upload-dragger {
+  width: 100%;
+  height: auto;
+  border: none;
+}
+
+.upload-demo {
+  /* border: 1px dashed #ccc; */
+  border-radius: 6px;
+  height: 100px;
+  overflow: auto;
+}
+
+/* 对话框 */
+
+.el-dialog__body {
+  padding: 0 20px;
+}
+
+.el-radio {
+  height: 30px;
+  line-height: 30px
+}
+
+.el-tabs__item {
+  font-weight: bold;
+}
+
+.el-date-editor.el-input,
+.el-date-editor.el-input__inner {
+  width: 100%
+}
+.el-card .el-tabs--border-card>.el-tabs__content{
+  padding: 0;
+  height: 100px;
+}
+.el-tabs--border-card{
+  box-shadow: none;
+  /* border-radius: 4px */
+}
 .el-tabs__item{
-  padding: 0 10px
+  height: 30px;
+  line-height: 30px
 }
-
-.lw-container {
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    display: table;
+.el-upload-dragger .el-upload__text{
+  margin-top: 12px
 }
-
-.lw-table {
-    display: table-cell;
-    width: calc(100% - 200px);
-    box-sizing: border-box;
-    padding: 24px;
-}
-
-.search-content {
-    border: 1px solid #dfe6ec;
-    box-sizing: border-box;
-    background-color: #fff;
-}
-
-.search-content .el-form {
-    padding: 20px 20px 0;
-}
-
-.search-btn {
-    margin-bottom: 16px;
-    margin-top: 16px
-}
-
-/* .el-button {
-    width: 80px;
-} */
-.el-table .el-button {
-    width: 48px;
-}
-
-.el-tabs__header{
-    margin-bottom:0;
+.radio .el-form-item__content{
+  margin-left: 0 !important;
+  text-align: left;
 
 }
-.el-tabs--top.el-tabs--border-card .el-tabs__item:nth-child(2){
-  padding-left: 10px;
+.radio .el-form-item__label{
+  text-align: left
 }
-.el-dialog__body{
-  padding:0 20px;
+.radio1 .el-form-item--mini.el-form-item, .el-form-item--small.el-form-item{
+  border-right: 1px dashed #ccc;
+  
 }
-.form-wrap {
-  padding: 20px 20px 0 20px
+.radio2 .el-form-item--mini.el-form-item, .el-form-item--small.el-form-item{
+  padding-left: 5px
 }
-
-.info-table{
-    margin-top:20px;
-    margin-bottom:0
-}
-.el-collapse-item__header{
-    line-height: 36px;
-    height: 36px;
-    font-weight: bold;
-  }
-  .el-collapse-item__arrow{
-    line-height: 36px;
-  }
- 
-  .el-radio{
-      height: 30px;
-      line-height: 30px
-  }
