第一个提交文档接口对接成功

--- a/IHE-Test/static/css/main.css
+++ b/IHE-Test/static/css/main.css
@@ -43,7 +43,12 @@ body {
   padding: 10px 20px;
   text-align: left;
   border: none;
-  color: #457bc7
+  color: #457bc7;
+  font-size: 14px
+}
+.el-collapse-item__header{
+  font-size: 14px;
+  color: #457bc7;
 }
 
 .el-card__body {
