--- a/IHE-Test/static/css/main.css
+++ b/IHE-Test/static/css/main.css
@@ -23,7 +23,7 @@ body {
   height: 36px;
   font-weight: bold;
   text-align: left;
-  margin-left: 45px;
+  margin-left: 30px;
 }
 
 .el-collapse-item__arrow {
@@ -129,4 +129,10 @@ body {
 }
 .radio2 .el-form-item--mini.el-form-item, .el-form-item--small.el-form-item{
   padding-left: 5px
+}
+.el-select{
+  width: 100%;
+}
+.center .el-button {
+  margin-bottom: 10px;
 }
