--- a/IHE-Test/static/css/main.css
+++ b/IHE-Test/static/css/main.css
@@ -6,10 +6,13 @@ body {
   box-sizing: border-box;
 }
 
-#app {
+body{
+  /* text-align: center */
+}
+/* #app {
   height: 100%;
   text-align: center
-}
+} */
 
 .form-wrap {
   padding: 20px;
@@ -29,6 +32,9 @@ body {
 .el-collapse-item__arrow {
   line-height: 36px;
   float: none;
+}
+.patientConfig .el-collapse-item .el-collapse-item__content{
+  padding-bottom: 0
 }
 
 /* 卡片 */
@@ -135,4 +141,18 @@ body {
 }
 .center .el-button {
   margin-bottom: 10px;
+}
+
+/* pix/pdq中下拉框表格样式 */
+.pix-th-color {
+  color: #8492a6;
+}
+.pix-right {
+  float: right;
+  margin-right: 8px;
+}
+
+.pix-margin {
+  margin-left: 8px;
+  margin-right: 8px;
 }
